文字列リソース化。 縮尺設定追加。 保存のキャンセル処理など追加。

--- a/PdfToJwwConverter/Properties/Settings.settings
+++ b/PdfToJwwConverter/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="EnableOverwrite" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="JwwScaleValue" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
