タイトルにバージョン追加。 HPへのリンク追加。 メッセージエリアをステータスバーに変更。

--- a/PdfToJww/PdfToJww.csproj
+++ b/PdfToJww/PdfToJww.csproj
@@ -1,9 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Authors>Junkbulk</Authors>
+    <Company>Jinki-Keikaku</Company>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -41,9 +47,6 @@
 
   <ItemGroup>
     <None Update="JwwHelper_x64.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="JwwHelper_x86.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="PdfUtility.dll">
