--- a/PdfToJwwConverter/PdfToJwwConverter.csproj
+++ b/PdfToJwwConverter/PdfToJwwConverter.csproj
@@ -5,6 +5,18 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <PackageIcon>PdfToJww.png</PackageIcon>
+    <ApplicationIcon>Resources\PdfToJww.ico</ApplicationIcon>
+    <Authors>Junkbulk</Authors>
+    <Company>Jinki-Keikaku</Company>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
+  </PropertyGroup>
+
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
