--- a/PdfToJwwConverter/Properties/Settings.settings
+++ b/PdfToJwwConverter/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="JwwScaleValue" Type="System.Double" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="JwwPaperCode" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">3</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
