--- a/PdfToJww/PdfToJww.csproj
+++ b/PdfToJww/PdfToJww.csproj
@@ -49,6 +49,9 @@
     <None Update="JwwHelper_x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="JwwHelper_x86.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="PdfUtility.dll">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
