--- a/PdfToJwwConverter/PdfToJwwConverter.csproj
+++ b/PdfToJwwConverter/PdfToJwwConverter.csproj
@@ -10,8 +10,9 @@
     <Authors>Junkbulk</Authors>
     <Company>Jinki-Keikaku</Company>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.1</FileVersion>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0</FileVersion>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
 
