--- a/PdfToJwwConverter/Properties/Settings.settings
+++ b/PdfToJwwConverter/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="JwwPaperCode" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">3</Value>
     </Setting>
+    <Setting Name="EnableCombineDashedLine" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
