円弧変換追加

--- a/PdfToJwwConverter/Properties/Settings.settings
+++ b/PdfToJwwConverter/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="EnableCombineDashedLine" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="EnableCreateArc" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
