--- a/PdfToJww/PdfToJww.csproj
+++ b/PdfToJww/PdfToJww.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <Authors>Junkbulk</Authors>
     <Company>Jinki-Keikaku</Company>
+    <AssemblyVersion>1.2.0</AssemblyVersion>
+    <FileVersion>1.2.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
